CSS BUG FIX: fixed leader board section on the rules page not showing images correctly.

--- a/css/styles.css
+++ b/css/styles.css
@@ -724,7 +724,8 @@ span::selection {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+  margin: 0 auto;
+  width: 50%;
   padding: 1rem 0.5rem;
 }
 
@@ -1469,7 +1470,7 @@ span::selection {
   .rules--vertical-block {
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: center;
   }
 
   .rules--vertical-block > p {
